--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vuluong</groupId>
-    <artifactId>JavaKnowledge</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>java-is-awesome</artifactId>
+    <version>0.0.1</version>
+
     <build>
         <plugins>
             <plugin>
