--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </build>
     <modules>
         <module>leetcode</module>
+        <module>interview</module>
     </modules>
 
     <dependencies>
