:tada: add Observer, Strategy, TemplateMethod design pattern

--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>design-pattern</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
