--- a/microservice-example/fraud/pom.xml
+++ b/microservice-example/fraud/pom.xml
@@ -34,6 +34,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vuluong</groupId>
+            <artifactId>clients</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
