--- a/microservice-example/notification/pom.xml
+++ b/microservice-example/notification/pom.xml
@@ -9,7 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>customer</artifactId>
+    <artifactId>notification</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
     </properties>
@@ -39,4 +51,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 </project>
