--- a/microservice-example/notification/pom.xml
+++ b/microservice-example/notification/pom.xml
@@ -45,6 +45,14 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.vuluong</groupId>
             <artifactId>clients</artifactId>
             <version>0.0.1</version>
