--- a/microservice-example/notification/pom.xml
+++ b/microservice-example/notification/pom.xml
@@ -53,6 +53,16 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vuluong</groupId>
+            <artifactId>amqp</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.vuluong</groupId>
             <artifactId>clients</artifactId>
             <version>0.0.1</version>
