--- a/microservice-example/pom.xml
+++ b/microservice-example/pom.xml
@@ -15,6 +15,8 @@
         <module>eureka-server</module>
         <module>clients</module>
         <module>notification</module>
+        <module>api-gateway</module>
+        <module>amqp</module>
     </modules>
 
     <properties>
